<resources>
    <string name="app_name">NFCAPP</string>
    <string name="nfcapp">NFCApp</string>
    <string name="uid">UID:</string>
    <string name="admin_login">admin login</string>
    <string name="nfc_prompt">Please bring your Phone near the NFC tag.</string>
    <string name="admin_title">Admin Login</string>
    <string name="back_btn">Back</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="user_hint">Username</string>
    <string name="pass_hint">Password</string>
    <string name="map">Map/Initialize</string>
    <string name="add">Add Object</string>
    <string name="deletebtn">Delete</string>
    <string name="options">Objects</string>
    <string name="loginbtn">Login</string>
    <string name="backtoscanbtn">Scan</string>
    <string name="addobjtitle">Add Object</string>
    <string name="addbtn">Add</string>
    <string name="name_inp">Name</string>
    <string name="location_inp">Location</string>
    <string name="desc_inp">Description</string>
    <string name="maptitle">Map NFC</string>
    <string name="nfc_map_prompt">Please bring your Phone near the NFC tag to map to the object.</string>
</resources>