<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/addobjectbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="146dp"
        android:layout_marginEnd="146dp"
        android:layout_marginBottom="91dp"
        android:fontFamily="@font/tiltneon"
        android:text="@string/add"
        app:layout_constraintBottom_toTopOf="@+id/backtoscanbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="onAdminAddObject"/>

    <Button
        android:id="@+id/mapbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="138dp"
        android:layout_marginEnd="136dp"
        android:layout_marginBottom="109dp"
        android:fontFamily="@font/tiltneon"
        android:text="@string/map"
        app:layout_constraintBottom_toTopOf="@+id/addobjectbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="onAdminMap"/>

    <TextView
        android:id="@+id/adminoptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="159dp"
        android:layout_marginTop="174dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="125dp"
        android:fontFamily="@font/tiltneon"
        android:text="@string/options"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/mapbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/backtoscanbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="340dp"
        android:text="@string/backtoscanbtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="onAdminScan"
        />

</androidx.constraintlayout.widget.ConstraintLayout>